test/compile-fail/resolution/type-existence/self-without-type-scope/expected.txt
error: unresolved type `Self`
  ┌─ ./test/compile-fail/resolution/type-existence/self-without-type-scope/top.rhdl:1:11
  │
1 │ fn x() -> Self { }
  │           ^^^^ no `Self` type

